java-application-devops-cicd-terraform-docker-kubernetes-helm-jenkins_Projetc/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-war-service
spec:
  type: LoadBalancer
  selector:
    app: java-war-app
  ports:
    - port: 80
      targetPort: 8080s
